--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -23,3 +23,14 @@
     </div>
     <%= render :partial => "layouts/footer"%>
 </div>
+
+<%# javascript %>
+<div id="container">
+	<div id="theTarget">
+		<div class="image1"></div>
+		<div class="image2"></div>
+		<div class="image3"></div>
+		<div class="image4"></div>
+		<div class="image5"></div>
+	</div>
+</div>
